css/main.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  background: black;
  color: white;
  font-family: "Poppins";
}

:root {
  --primary-color: #9f70ff;
  --copy-color: #A1A1A6;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.nav-wrapper .wrapper header {
  display: flex;
  justify-content: space-between;
}
.nav-wrapper .wrapper header .logo {
  display: flex;
  font-size: 1.5em;
}
.nav-wrapper .wrapper header .logo .devs {
  color: var(--primary-color);
  font-weight: bold;
}
.nav-wrapper .wrapper header .logo .decide {
  font-weight: lighter;
}
.nav-wrapper .wrapper header ul {
  display: flex;
}
.nav-wrapper .wrapper header ul li a {
  font-size: 1.25em;
  padding: 0 0.6em;
}

.hero-wrapper {
  background-size: cover;
  background: url("../img/herobackground.webp") center;
  height: 100vh;
  width: 100vw;
}
.hero-wrapper .hero-overlay {
  background: rgba(0, 0, 0, 0.7);
  height: 100vh;
}
.hero-wrapper .wrapper {
  display: flex;
  align-content: center;
  align-items: center;
  height: 70vh;
  width: 615px;
}
.hero-wrapper .hero-content h1 {
  font-weight: normal;
  font-size: 72px;
  line-height: 100%;
}
.hero-wrapper .hero-content .subtitle {
  margin-top: 0;
  margin-bottom: 0;
}
.hero-wrapper .hero-content .hero-cta {
  text-align: center;
  margin-top: 2em;
}
.hero-wrapper .hero-content .hero-cta .primary-cta {
  background: var(--primary-color);
  color: white;
  text-decoration: none;
  padding: 0.6em 1.3em;
  font-size: 1.5em;
  border-radius: 5em;
  font-weight: bold;
  display: inline-block;
}

.use-cases-wrapper .use-case-copy {
  color: var(--copy-color);
  font-size: 4em;
  line-height: 100%;
  margin-bottom: 0.5em;
}
.use-cases-wrapper .use-case-cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 2em;
  width: 100%;
}
.use-cases-wrapper .use-case-cards .card {
  border-radius: 1em;
  padding: 3em;
  background-color: #151515;
  flex: 45%;
}
.use-cases-wrapper .use-case-cards .card h3 {
  font-weight: 100;
  font-size: 2.5em;
  margin: 0;
}
.use-cases-wrapper .use-case-cards .card p {
  font-size: medium;
}
.use-cases-wrapper .use-case-cards .card a {
  font-weight: bold;
  color: var(--primary-color);
  font-size: 1.35em;
}

.wrapper {
  padding: 1.5em;
  max-width: 1200px;
  margin: 0 auto;
}

/*# sourceMappingURL=main.css.map */

